# PARC-PR

./: CMakeLists.txt  PARC.cbp  PARC.depend  PARC.layout  main.cpp
Plan_Library/: extendedPlanLibrary.cpp  planLibrary.cpp  probabilityDistribution.cpp  rule.cpp
Plans/: bibliotheque_plan.txt  list_plan.txt
include/: extendedPlanLibrary.h  fileManager.h  planLibrary.h  probabilityDistribution.h  rule.h  solver.h  testSolver.h
old/: solver.cpp  solver.h  test.cpp  test.h
src/solver/: solver.cpp  testSolver.cpp
